--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -19,6 +19,7 @@ body {
 }
 
 h1 {
+    margin-top: 0;
     font-size: 4.5rem;
     font-family: var(--headings-font);
     color: greenyellow;
@@ -75,6 +76,15 @@ button:hover {
     color: greenyellow;
 }
 
+#diffBox {
+    margin-bottom: 2rem;
+}
+
+#audio_icon {
+    color: greenyellow;
+    font-size: 2.5rem;
+}
+
 #score {
     text-align: center;
     font-size: 5rem;
@@ -100,6 +110,22 @@ button:hover {
     animation: slideFromTop 0.85s ease-in-out forwards;
 }
 
+#dialog_box {
+    position: absolute;
+    left: 50%;
+    top: -10vh;
+    transform: translate(-50%, -50%);
+    background: greenyellow;
+    padding: .25rem .85rem;
+    color: red;
+    border: red solid 1px;
+    border-radius: .25rem;
+}
+
+#dialog_box.shown {
+    animation: displayDialog 0.35s ease-in-out forwards;
+}
+
 @keyframes slideFromTop {
     0% {
         top: -100vh;
@@ -107,5 +133,15 @@ button:hover {
 
     100% {
         top: 0;
+    }
+}
+
+@keyframes displayDialog {
+    0% {
+        top: -10vh;
+    }
+
+    100% {
+        top: 5%;
     }
 }
